[docs] CSS overflow scroll fix for desktop view.

--- a/site/less/article.less
+++ b/site/less/article.less
@@ -1,5 +1,6 @@
 body > main > article {
-  overflow: scroll;
+  overflow-x: auto;
+  overflow-y: scroll;
   padding-bottom: 4rem;
   ul {
     padding-inline-start: 2rem;
