--- a/site/less/layout.less
+++ b/site/less/layout.less
@@ -36,7 +36,7 @@ body {
     > nav {
       display: none;
       width: 16rem;
-      overflow: scroll;
+      overflow: auto;
       margin-left: 1rem;
     }
     > article {
@@ -44,7 +44,7 @@ body {
       padding: 0 1rem;
       min-width: 100vw;
       max-width: 50rem;
-      overflow: scroll;
+      overflow: auto;
       &#home {
         max-width: 84rem;
       }
@@ -52,7 +52,7 @@ body {
     > aside {
       display: none;
       width: 16rem;
-      overflow: scroll;
+      overflow: auto;
       margin-right: 1rem;
     }
   }
